started adding code to read MP3 files

--- a/build.properties
+++ b/build.properties
@@ -4,4 +4,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               splash.bmp
+               splash.bmp,\
+               lib/jid3lib-0.5.4.jar
