Minor changes to View

--- a/build.properties
+++ b/build.properties
@@ -6,3 +6,4 @@ bin.includes = plugin.xml,\
                icons/,\
                splash.bmp,\
                lib/jid3lib-0.5.4.jar
+jars.compile.order = .
